// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render book form properly 1`] = `
<div
  className="container"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        for="description"
      >
        Description
      </label>
      <input
        autoFocus={true}
        className="form-control"
        id="description"
        onChange={[Function]}
        placeholder="Description"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        for="price"
      >
        Price
      </label>
      <input
        className="form-control"
        id="price"
        onChange={[Function]}
        placeholder="Price"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        for="note"
      >
        Note
      </label>
      <textarea
        className="form-control"
        id="note"
        onChange={[Function]}
        placeholder="Add note for your book (optional)"
        value=""
      />
    </div>
    <button
      className="btn btn-success"
      type="submit"
    >
      Add Book
    </button>
  </form>
</div>
`;

exports[`should render book form with book data 1`] = `
<div
  className="container"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        for="description"
      >
        Description
      </label>
      <input
        autoFocus={true}
        className="form-control"
        id="description"
        onChange={[Function]}
        placeholder="Description"
        required={true}
        type="text"
        value="Angular Book"
      />
    </div>
    <div
      className="form-group"
    >
      <label
        for="price"
      >
        Price
      </label>
      <input
        className="form-control"
        id="price"
        onChange={[Function]}
        placeholder="Price"
        type="text"
        value="0.1"
      />
    </div>
    <div
      className="form-group"
    >
      <label
        for="note"
      >
        Note
      </label>
      <textarea
        className="form-control"
        id="note"
        onChange={[Function]}
        placeholder="Add note for your book (optional)"
        value="Angular Book Notes"
      />
    </div>
    <button
      className="btn btn-success"
      type="submit"
    >
      Add Book
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div
  className="container"
>
  <p>
    Please provider Description and Price
  </p>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        for="description"
      >
        Description
      </label>
      <input
        autoFocus={true}
        className="form-control"
        id="description"
        onChange={[Function]}
        placeholder="Description"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        for="price"
      >
        Price
      </label>
      <input
        className="form-control"
        id="price"
        onChange={[Function]}
        placeholder="Price"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        for="note"
      >
        Note
      </label>
      <textarea
        className="form-control"
        id="note"
        onChange={[Function]}
        placeholder="Add note for your book (optional)"
        value=""
      />
    </div>
    <button
      className="btn btn-success"
      type="submit"
    >
      Add Book
    </button>
  </form>
</div>
`;
